--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
-FIREBASE_API_KEY=''
-FIREBASE_AUTH_DOMAIN=''
-FIREBASE_PROJECT_ID=''
-FIRESBASE_STORAGE=''
-FIREBASE_SENDER_ID=''
-FIREBASE_APP_ID=''
+REACT_APP_FIREBASE_API_KEY=''
+REACT_APP_FIREBASE_AUTH_DOMAIN=''
+REACT_APP_FIREBASE_DATABASE_URL=''
+REACT_APP_FIREBASE_PROJECT_ID=''
+REACT_APP_FIREBASE_STORAGE=''
+REACT_APP_FIREBASE_SENDER_ID=''
+REACT_APP_FIREBASE_APP_ID=''
